Fix table border in dark mode

--- a/packages/ui-default/theme/dark.styl
+++ b/packages/ui-default/theme/dark.styl
@@ -221,7 +221,7 @@ $hover-background-color = #424242
     background-color: rgb(30, 30, 30)
 
   .typo table th, .typo table td, .typo table caption
-    border-color: #323232
+    border-color: #666
     color: #999
 
   body>.marker
